# rust-moysklad

./: Cargo.toml  README.md
examples/: counterparty.rs  currencies.rs  get_all_assortment.rs  init_client_from_env.rs  product.rs  productfolder.rs  uom.rs  variant.rs
src/: api_client.rs  lib.rs
src/models/: assortment.rs  characteristic.rs  counterparty.rs  country.rs  currency.rs  mod.rs  product.rs  product_folder.rs  region.rs  uom.rs  variant.rs
