[package]
name = "rust-moysklad"
description = "Framework for moy sklad"
license = "MIT"
readme = "README.md"
authors = ["Aleksandr Provotorov <provotorov@inbox.ru>"]
repository = "https://github.com/LigeronAhill/rust-moysklad/"
version = "0.1.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
serde_with = "3.6.1"
uuid = { version = "1.7.0", features = ["serde"] }
chrono = { version = "0.4.33", features = ["serde"] }
anyhow = "1.0.79"
reqwest = { version = "0.11.24", features = ["gzip", "json"] }
tracing = "0.1.40"

[dev-dependencies]
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
