[package]
name = "rust-moysklad"
description = "Framework for moy sklad"
license = "MIT"
readme = "README.md"
authors = ["Aleksandr Provotorov <provotorov@inbox.ru>"]
repository = "https://github.com/LigeronAhill/rust-moysklad/"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.46", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3.14"
uuid = { version = "1.17", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["gzip", "json"] }
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
